# kaibai_store_service

./: .env  Cargo.toml  README.md  build.sh  dockerfile  kaibai_store_service.yml  res.rs  run.sh  test.sh
.github/workflows/: CI.yml  test.yml
doc/: DD.md
src/: main.rs  middleware.rs
src/dao/: mod.rs  product_dao.rs  store_dao.rs
src/entity/: mod.rs  product_entity.rs  store_entity.rs  store_product_entity.rs  store_stuff.rs
src/product/: mod.rs  product_controller.rs  product_service.rs
src/store/: mod.rs  store_controller.rs  store_service.rs
src/util/: mod.rs  store_err.rs  structs.rs
